Fixed EZP-23914: Image and Media edit views display are broken in IE10

--- a/Resources/public/css/views/fields/edit/image.css
+++ b/Resources/public/css/views/fields/edit/image.css
@@ -39,9 +39,14 @@
 }
 
 .ez-view-imageeditview .ez-image-editpreview {
+    display: -webkit-box;
     display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
     -webkit-flex-direction: row;
+        -ms-flex-direction: row;
             flex-direction: row;
 }
 
@@ -57,6 +62,7 @@
 
 .ez-view-imageeditview .ez-image-properties {
     margin-left: 1em;
+    -webkit-box-flex: 1;
     -webkit-flex: 1;
         -ms-flex: 1;
             flex: 1;
